--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,2 @@
-.DS_Store
-
-*.pyc
-*.pyo
-
-*.egg-info
-_build
-build
-dist
-MANIFEST
-
-.coverage
-.coveragerc
-coverage
-htmlcov
-
-_trial_temp
-
-.tox
-
-TODO
+/veb/_version.py
+/version.txt
