--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,20 @@
 [tox]
-envlist = py27, pypy, py32, py33
+envlist = pypy, style
 
 [testenv]
+changedir={envtmpdir}
 commands =
-    nosetests tests.py
-
+    {envbindir}/trial [] veb
+    {envpython} -m doctest {toxinidir}/README.rst
 deps =
-    nose
+    -r{toxinidir}/test-requirements.txt
+    twisted
+
+[testenv:style]
+commands =
+    flake8 [] --max-complexity 10 {toxinidir}/veb
+deps =
+    flake8
+
+[flake8]
+exclude = veb/__init__.py
