Moderner tox and GH Actions.

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,54 @@
 [tox]
-envlist= pypy, py27, py35, py310, style
+envlist =
+    {py37,py38,py39,py310,py311,pypy3}-{build,tests}
+    readme
+    secrets
+    style
+skipsdist = True
 
 [testenv]
-changedir={envtmpdir}
+passenv = CODECOV* CI
+setenv =
+    coverage,codecov: MAYBE_COVERAGE = coverage run -m
+    coverage,codecov: COVERAGE_RCFILE={toxinidir}/.coveragerc
+    coverage,codecov: COVERAGE_DEBUG_FILE={envtmpdir}/coverage-debug
+    coverage,codecov: COVERAGE_FILE={envtmpdir}/coverage-data
+changedir = {envtmpdir}
+args_are_paths = false
 commands =
-    {envbindir}/trial [] veb
-    {envpython} -m doctest {toxinidir}/README.rst
+    {envpython} -m pip install {toxinidir}
+
+    safety: {envpython} -m safety check
+
+    tests,coverage,codecov: {envpython} -m {env:MAYBE_COVERAGE:} virtue {posargs:veb}
+    tests: {envpython} -m doctest {toxinidir}/README.rst
+
+    coverage: {envpython} -m coverage report --show-missing
+    coverage: {envpython} -m coverage html --directory={envtmpdir}/htmlcov
 deps =
-    -r{toxinidir}/test-requirements.txt
-    twisted
+    safety: safety
+    tests,coverage: virtue
+    coverage: coverage
+
+[testenv:build]
+deps = build
+commands = {envpython} -m build {toxinidir} --outdir {envtmpdir}/dist
+
+[testenv:readme]
+deps =
+    build
+    twine
+commands =
+    {envpython} -m build --outdir {envtmpdir}/dist {toxinidir}
+    {envpython} -m twine check {envtmpdir}/dist/*
 
 [testenv:style]
-commands =
-    flake8 [] --max-complexity 10 {toxinidir}/veb
 deps =
     flake8
-
-[flake8]
-exclude = veb/__init__.py
+    flake8-broken-line
+    flake8-bugbear
+    flake8-commas
+    flake8-quotes
+    flake8-tidy-imports
+commands =
+    {envpython} -m flake8 {posargs} --max-complexity 10 {toxinidir}/veb
