--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version.name }}
     - name: Install dependencies
-      run: sudo apt-get install -y libenchant-dev
+      run: sudo apt-get install -y libenchant-2-dev
       if: runner.os == 'Linux' && startsWith(matrix.python-version.toxenv, 'docs-')
     - name: Install dependencies
       run: brew install enchant
