--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ name = "veb"
 description = "Dynamically-allocated reduced-space van Emde Boas trees."
 readme = "README.rst"
 license = {text = "MIT"}
+requires-python = ">=3.8"
 keywords = ["data structure"]
 authors = [
   {email = "Julian+veb@GrayVines.com"},
@@ -17,14 +18,13 @@ authors = [
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
+  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
-  "License :: OSI Approved :: MIT License",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
@@ -41,6 +41,51 @@ Funding = "https://github.com/sponsors/Julian"
 Source = "https://github.com/Julian/veb"
 
 [tool.isort]
+combine_as_imports = true
 from_first = true
 include_trailing_comma = true
 multi_line_output = 3
+
+[tool.ruff]
+line-length = 79
+target-version = "py38"
+select = ["B", "D", "E", "F", "Q", "UP", "W"]
+ignore = [
+  # Wat, type annotations for self and cls, why is this a thing?
+  "ANN101",
+  "ANN102",
+  # Private annotations are fine to leave out.
+  "ANN202",
+  # I don't know how to more properly annotate "pass along all arguments".
+  "ANN401",
+  # raise SomeException(...) is fine.
+  "B904",
+  # It's fine to not have docstrings for magic methods.
+  "D105",
+  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
+  "D200",
+  # No blank lines before docstrings.
+  "D203",
+  # Start docstrings on the second line.
+  "D212",
+  # This rule misses sassy docstrings ending with ! or ?.
+  "D400",
+  # Section headers should end with a colon not a newline
+  "D406",
+  # Underlines aren't needed
+  "D407",
+  # Plz spaces after section headers
+  "D412",
+  # We support 3.8 + 3.9
+  "UP007",
+]
+extend-exclude = ["suite"]
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+
+[tool.ruff.per-file-ignores]
+"docs/*" = ["ANN", "D"]
+"veb/tests/*" = ["ANN", "D"]
+"noxfile.py" = ["ANN", "D"]
+"perftest.py" = ["ANN", "D"]
