--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,15 @@ source = "vcs"
 [project]
 name = "veb"
 description = "Dynamically-allocated reduced-space van Emde Boas trees."
-readme = "README.rst"
-license = {text = "MIT"}
 requires-python = ">=3.8"
+readme = "README.rst"
 keywords = ["data structure"]
 authors = [
-  {email = "Julian+veb@GrayVines.com"},
-  {name = "Julian Berman"},
+  { name = "Julian Berman", email = "Julian+veb@GrayVines.com" },
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
@@ -28,10 +27,8 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
-
 ]
 dynamic = ["version"]
-
 
 
 [project.urls]
@@ -42,50 +39,76 @@ Source = "https://github.com/Julian/veb"
 
 [tool.isort]
 combine_as_imports = true
+ensure_newline_before_comments = true
 from_first = true
 include_trailing_comma = true
 multi_line_output = 3
 
 [tool.ruff]
 line-length = 79
-target-version = "py38"
-select = ["B", "D", "E", "F", "Q", "UP", "W"]
-ignore = [
-  # Wat, type annotations for self and cls, why is this a thing?
-  "ANN101",
-  "ANN102",
-  # Private annotations are fine to leave out.
-  "ANN202",
-  # I don't know how to more properly annotate "pass along all arguments".
-  "ANN401",
-  # raise SomeException(...) is fine.
-  "B904",
-  # It's fine to not have docstrings for magic methods.
-  "D105",
-  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
-  "D200",
-  # No blank lines before docstrings.
-  "D203",
-  # Start docstrings on the second line.
-  "D212",
-  # This rule misses sassy docstrings ending with ! or ?.
-  "D400",
-  # Section headers should end with a colon not a newline
-  "D406",
-  # Underlines aren't needed
-  "D407",
-  # Plz spaces after section headers
-  "D412",
-  # We support 3.8 + 3.9
-  "UP007",
-]
-extend-exclude = ["suite"]
 
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+  "A001",  # It's fine to shadow builtins
+  "A002",
+  "A003",
+  "ARG",  # This is all wrong whenever an interface is involved
+  "ANN",  # Just let the type checker do this
+  "B006",  # Mutable arguments require care but are OK if you don't abuse them
+  "B008",  # It's totally OK to call functions for default arguments.
+  "B904",  # raise SomeException(...) is fine.
+  "B905",  # No need for explicit strict, this is simply zip's default behavior
+  "C408",  # Calling dict is fine when it saves quoting the keys
+  "C901",  # Not really something to focus on
+  "D105",  # It's fine to not have docstrings for magic methods.
+  "D107",  # __init__ especially doesn't need a docstring
+  "D200",  # This rule makes diffs uglier when expanding docstrings
+  "D203",  # No blank lines before docstrings.
+  "D212",  # Start docstrings on the second line.
+  "D400",  # This rule misses sassy docstrings ending with ! or ?
+  "D401",  # This rule is too flaky.
+  "D406",  # Section headers should end with a colon not a newline
+  "D407",  # Underlines aren't needed
+  "D412",  # Plz spaces after section headers
+  "EM101",  # These don't bother me, it's fine there's some duplication.
+  "EM102",
+  "FBT",  # It's worth avoiding boolean args but I don't care to enforce it
+  "FIX",  # Yes thanks, if I could it wouldn't be there
+  "N",  # These naming rules are silly
+  "PLR0911",  # These metrics are fine to be aware of but not to enforce
+  "PLR0912",
+  "PLR0913",
+  "PLR0915",
+  "PLR1714",  # This makes for uglier comparisons sometimes
+  "PLR2004",  # Go away.
+  "PLW2901",  # Shadowing for loop variables is occasionally fine.
+  "PT",  # We use unittest
+  "PYI025",  # wat, I'm not confused, thanks.
+  "RET502",  # Returning None implicitly is fine
+  "RET503",
+  "RET505",  # These push you to use `if` instead of `elif`, but for no reason
+  "RET506",
+  "RSE102",  # Ha, what, who even knew you could leave the parens off. But no.
+  "SIM300", # Not sure what heuristic this uses, but it's easily incorrect
+  "S311",   # We are not cryptographic porpoises
+  "SLF001",  # Private usage within this package itself is fine
+  "TD",  # These TODO style rules are also silly
+  "UP007",  # We support 3.8 + 3.9
+]
+
+[tool.ruff.lint.flake8-pytest-style]
+mark-parentheses = false
+
+[tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
 
-[tool.ruff.per-file-ignores]
-"docs/*" = ["ANN", "D"]
+[tool.ruff.lint.isort]
+combine-as-imports = true
+from-first = true
+
+[tool.ruff.lint.per-file-ignores]
+"noxfile.py" = ["ANN", "D100", "S101", "T201"]
+"docs/*" = ["ANN", "D", "INP001"]
 "veb/tests/*" = ["ANN", "D"]
-"noxfile.py" = ["ANN", "D"]
-"perftest.py" = ["ANN", "D"]
+"perftest.py" = ["ANN", "D", "T201"]
